--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,38 @@
 {
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "serve": "wds --watch"
-  },
-  "keywords": [
-    "web-components",
-    "lit-element",
-    "javascript",
-    "lit"
-  ],
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "lit": "^2.2.4"
+    "@types/node": "^16.18.82",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.4",
+    "styled-components": "^6.1.8",
+    "typescript": "^4.9.5"
   },
-  "devDependencies": {
-    "@custom-elements-manifest/analyzer": "^0.6.3",
-    "@open-wc/testing": "^3.1.5",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@web/dev-server": "^0.1.31",
-    "@web/dev-server-legacy": "^1.0.0",
-    "@webcomponents/webcomponentsjs": "^2.6.0",
-    "lit-analyzer": "^1.2.1",
-    "prettier": "^2.6.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.73.0",
-    "rollup-plugin-summary": "^1.4.3",
-    "rollup-plugin-terser": "^7.0.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
