gain progress, but still not there.

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "author": "Uriel Penker",
   "private": true,
   "dependencies": {
     "@types/node": "^16.18.82",
