--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forter-chatbot-server",
+  "name": "chatbot-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,13 +9,13 @@
     "build": "rimraf ./build",
     "start:dev": "nodemon"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Uriel Penker",
   "devDependencies": {
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.17.1",
     "socket.io": "^4.5.2"
   }
