--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
