--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npm run build && node build/index.js",
+    "start": "npm run build && node src/index.js",
     "build": "rimraf ./build",
     "start:dev": "nodemon"
   },
